horizontal scrolling is fixed

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,12 +10,12 @@
   background-position: center;
   overflow: hidden;
   height: 576px;
-  width: 100vw;
+  /* width: 100vw; */
   max-width: 100%;
   overflow: hidden;
   margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
   color: white;
 }
 
@@ -84,10 +84,14 @@
 @media screen and (max-width: 768px) {
   .header {
     height: 480px;
+    max-width: 767px;
     padding: 0;
   }
   .header-content {
     max-width: 450px;
+  }
+  */ .header__container {
+    margin: 0 !important;
   }
 
   .header__title {
