--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -1,4 +1,3 @@
-/* Modal Overlay */
 .modal {
   display: flex;
   position: fixed;
@@ -289,9 +288,19 @@
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 480px) {
   .modal {
-    align-items: flex-end;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 6000;
+    pointer-events: auto;
   }
 
   .modal__content {
