--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,12 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 40px;
-  padding-right: 40px;
+  /* padding-left: 40px;
+  padding-right: 40px; */
   height: 80px;
   margin: 0 auto;
   border-bottom: 1px solid rgba(196, 196, 196, 0.3);
-  max-width: 1440px;
+  /* max-width: 1020px; */
 }
 
 .nav__left-container {
@@ -33,13 +33,6 @@
   color: #1a1b22 !important;
 }
 
-/* .nav__logo-active {
-  font-family: "Roboto Slab", sans-serif;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 24px;
-} */
-
 .nav__container-links {
   display: flex !important;
   column-gap: 35px;
@@ -63,7 +56,6 @@
   padding: 0;
   color: white;
   border-bottom: 3px solid transparent;
-
   display: block;
 }
 
@@ -79,16 +71,6 @@
   color: black !important;
   border-bottom: 3px solid transparent;
 }
-
-/* .nav__btn-active {
-  font-family: "Roboto", sans-serif;
-  border-bottom: 2px solid white;
-  height: 80px;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 24px;
-  color: #fff;
-} */
 
 .nav__btn-active-saved-news {
   border-bottom: 2px solid black;
@@ -145,7 +127,6 @@
   cursor: pointer;
   padding: 0;
   border-bottom: 2px solid transparent;
-  /* color: #fff !important; */
 }
 
 .nav__menu-icon {
@@ -243,14 +224,6 @@
   }
 }
 @media screen and (max-width: 768px) {
-  .nav {
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center; */
-    padding-left: 40px !important;
-    padding-right: 40px !important;
-    /* max-width: 100vw; */
-  }
   .nav__logo {
     font-size: 18px;
   }
@@ -274,7 +247,6 @@
   }
 
   .nav__button-action {
-    /* display: none !important; */
     font-size: 16px;
   }
   .nav__btn-saved-news {
@@ -362,9 +334,30 @@
     margin-left: 16px;
   }
 
+  .nav__logo-container {
+    position: relative;
+    z-index: 3000;
+  }
+
   .nav__open {
     transform: translateY(0);
   }
+
+  .nav__button {
+    border-bottom: none !important;
+  }
+
+  .nav__button-action {
+    display: flex;
+    justify-content: left;
+    align-items: flex-end;
+    font-family: "Roboto", sans-serif;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+  }
+
   .nav__container-links {
     display: flex !important;
     flex-direction: column !important;
@@ -382,8 +375,9 @@
     background: none;
     border: none;
     cursor: pointer;
-    z-index: 2000;
+    z-index: 4000;
     padding: 0px;
+    color: #1a1b22;
   }
   .nav__btn {
     font-size: 14px;
@@ -430,13 +424,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding-top: 100px;
+    padding-top: 32px;
+    pointer-events: none;
 
     transform: translateY(-100%);
     z-index: 1500;
   }
   .nav__right-container.nav__open {
     transform: translateY(0);
+    pointer-events: auto;
   }
 
   .nav__menu-signin-btn {
@@ -456,9 +452,9 @@
     max-width: 288px;
     height: 56px;
     width: 100vh;
+    z-index: 5000;
 
     cursor: pointer;
-    z-index: 1600;
   }
 
   .nav__menu-signin-btn:hover {
